package com.example.learn.design.pattern.han._05结构型模式._07代理模式._02动态代理;

//接口
public interface ITeacherDao {

    void teach(); // 授课的方法

    void sayHello(String s);
}
